# cwr_tool

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/cwr_tool/: cli.py
src/cwr_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cwr_tool/format/: fixedwidth.py
src/cwr_tool/generation/: alt_record.py  com_record.py  control_records.py  group_builder.py  nwr_record.py  pipeline.py  records.py  spu_record.py  transaction.py  writer.py
src/cwr_tool/models/: input.py
src/cwr_tool/reporting/: models.py
src/cwr_tool/spec/: registry.py
src/cwr_tool/validation/: engine.py
src/cwr_tool/validation/rules/: base.py  schema_rules.py
tests/: test_cli_smoke.py  test_fixedwidth.py  test_minimal_wrk_golden.py  test_multi_group.py  test_writer_hello.py
tests/fixtures/: minimal.json
