[project]
name = "cwr-tool"
version = "0.1.0"
description = "CISAC CWR generation + validation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
]

[project.scripts]
cwr-tool = "cwr_tool.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
mypy_path = "src"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"